--- a/docs/Douglass_IntroductionToMachineLearning_2018_Syllabus_Day1.rmd
+++ b/docs/Douglass_IntroductionToMachineLearning_2018_Syllabus_Day1.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to Machine Learning (Syllabus/Code for Day 1)"
+title: "Introduction to Machine Learning (Syllabus/Code for Day 1): Information Theory and Problems in Learning"
 output: 
   html_notebook:
     toc: true # table of content true
@@ -72,21 +72,21 @@ Related Classes
 There are a number places on-line for constant updates on machine learning <br/>
 * [Reddit Machine Learning Subreddit](https://www.reddit.com/r/MachineLearning/)
 * [arxiv](https://twitter.com/arxiv_org)
+* [Arxiv Sanity Preserver](http://www.arxiv-sanity.com/)
 * [My twitter feed](https://twitter.com/RexDouglass)
 * [Political Analysis](https://www.cambridge.org/core/journals/political-analysis)
+* [openreview](https://openreview.net/)
+* [Distill](https://distill.pub/)
 
 Conferences
 * [Top Conferences for Machine Learning & Arti. Intelligence](http://www.guide2research.com/topconf/machine-learning)
 * [Neural Information Processing Systems (NIPS)](https://nips.cc/)
+* [International Conference on Machine Learning](https://icml.cc/)
 
-## Toy problems
+## Data Archives
 * [UC Irvine Machine Learning Repository](http://archive.ics.uci.edu/ml/index.php)<br/>
 * [Kaggle Datasets](https://www.kaggle.com/datasets?sortBy=votes&group=all)<br/>
 * [List_of_datasets_for_machine_learning_research](https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research)<br/>
-
-["Breast Cancer"](https://rpubs.com/raviolli77/352956), Raul Eulogio, January 26, 2018
-
-
 
 ## Software and Programming
 
@@ -127,12 +127,6 @@ set.seed(123)
 * (CIML), [Chapter 1,](http://ciml.info/dl/v0_99/ciml-v0_99-ch01.pdf) <br/>
 * WMLW 1.0 "Introduction" <br/>
 
-## Why Machine Learning?
-* ["ViEWS: a political Violence Early-Warning System,"](http://pcr.uu.se/research/views/) <br/>
-* ["Safe Disposal of Unexploded WWII Bombs,"](http://staff.math.su.se/hoehle/blog/2018/05/25/uxb.html) Michael Höhle, May 25, 2018, <br/>
-* ["Predicting Race and Ethnicity From the Sequence of Characters in a Name,"](https://arxiv.org/pdf/1805.02109.pdf),Gaurav Sood and Suriyan Laohaprapanon, May 8, 2018,  <br/>
-* ["ethnicolr: Predict Race and Ethnicity From Name,"](https://github.com/appeler/ethnicolr)<br/>
-
 ## What isn't machine learning?
 
 ### Statistics
@@ -141,6 +135,8 @@ set.seed(123)
 ### Causal Inference
 * Joshua D. Angrist & Jörn-Steffen Pischke, "Mostly Harmless Econometrics An Empiricist's Companion," 2009
 * ["Basic Concepts of Statistical Inference for Causal Effects in Experiments and Observational Studies,"](http://www.stat.columbia.edu/~cook/qr33.pdf) Donald B. Rubin, 2004 <br/>
+* ["When and How Should One Use Deep Learning for Causal Effect Inference"](https://technionmail-my.sharepoint.com/personal/urishalit_technion_ac_il/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018%2FIAS2018_2_for_public%2Epdf&parent=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018&slrid=aaa2759e-909e-5000-fd16-3e33cabf926f)
+* ["Comparing Covariate Prioritization via Matching to Machine Learning Methods for Causal Inference using Five Empirical Applications,"](https://arxiv.org/pdf/1805.03743.pdf),Luke Keele, Dylan Small, May 11, 2018, 
 
 # Information Theory
 
@@ -173,7 +169,6 @@ set.seed(123)
 * Zero-Bit information source, N-Bit message: No variation, and an arbitrary number of measurements with arbitrary number of states <br/>
 
 * ["Design, Inference, and the Strategic Logic of Suicide Terrorism"](https://pdfs.semanticscholar.org/f192/cf69908c84d92d269ef52c337fa487d6b65e.pdf), SCOTT ASHWORTH, JOSHUA D. CLINTON, ADAM MEIROWITZ, and KRISTOPHER W. RAMSAY, 2008, APSR
-
 
 ## Binary Source ($<=1bit$)
 
@@ -220,7 +215,7 @@ print(natstobits(entropy(Y_coin_twoheaded, method="emp")))
 ```
 
 ### [UCI Breast Cancer Dataset](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))
-
+["Breast Cancer"](https://rpubs.com/raviolli77/352956), Raul Eulogio, January 26, 2018
 ```{r}
 data(BreastCancer)
 glimpse(BreastCancer)
@@ -392,11 +387,11 @@ MAE(BostonHousing$medv, y_hat)
 MSE(BostonHousing$medv, y_hat)
 ```
 
-# Transmitters $X=f(Y)$
+# Transmitters and Receivers
 [Function_(mathematics)](https://en.wikipedia.org/wiki/Function_(mathematics))<br/>
+* [Inverse_function](https://en.wikipedia.org/wiki/Inverse_function)<br/>
 
-```{r}
-
+```{r, include=F}
 n=100
 Y_unif=runif(n=n)
 beta_1=.5
@@ -419,15 +414,6 @@ plot_grid(p1,p2,p3,p4, labels = c("A", "B", "C", "D"), ncol = 2)
 ```
 
 
-[Linear_separability](https://en.wikipedia.org/wiki/Linear_separability)
-
-# Messages $X$
-
-# Receivers $\hat{Y}=\hat{f}(X)$
-* [Inverse_function](https://en.wikipedia.org/wiki/Inverse_function)<br/>
-
-# One-Bit source, One-Bit message
-
 ## What makes a good receiver?
 * PRML 1.5 "Decision Theory" <br/>
 * ESL 2.4 Statistical Decision Theory
@@ -438,27 +424,14 @@ plot_grid(p1,p2,p3,p4, labels = c("A", "B", "C", "D"), ncol = 2)
 * WMLW 2.0 "Related Work"
 * ["No Free Lunch Theorems for Optimization,"](https://ti.arc.nasa.gov/m/profile/dhw/papers/78.pdf) David H. Wolpert and William G. Macready, 1997, <br/>
 
-## Parametric Functions 
-
 ## Overfitting
 * [Overfitting](https://en.wikipedia.org/wiki/Overfitting)<br/>
-
-## In Sample/Out of Sample / Cross Validation
 * [Training,_test,_and_validation_sets](https://en.wikipedia.org/wiki/Training,_test,_and_validation_sets)<br/>
-* [Cross-validation_(statistics)](https://en.wikipedia.org/wiki/Cross-validation_(statistics))<br/>
-* ["Linear Model Selection by Cross-Validation,"](http://www.libpls.net/publication/MCCV_Shao_1993.pdf), Jun Shao, 1993<br/>
-* ["Cross-validation failure: small sample sizes lead to large error bars,"](https://hal.inria.fr/hal-01545002/), Gaël Varoquaux, 2017<br/>
-* (ESL) "7 Model Assessment and Selection"
 
-## Bootstrap Aggregating / Bagging
-
-[Bootstrap_aggregating](https://en.wikipedia.org/wiki/Bootstrap_aggregating)
-
-# One-Bit source, Two-Bit message
 ## Ommitted Variable Bias
 * [Simpsons Paradox](https://en.wikipedia.org/wiki/Simpson%27s_paradox)<br/>
 
-### Feature Selection / Included Variable Bias
+## Feature Selection / Included Variable Bias
 * [Let’s Put Garbage—Can Regressions and Garbage—Can Probits Where They Belong](http://www.columbia.edu/~gjw10/achen04.pdf), Christopher H. Achen, Conflict Management and Peace Science, 2005
 * ["The Phantom Menace: Omitted Variable Bias in Econometric Research"](http://www.saramitchell.org/clarke05.pdf), Kevin A. Clarke, 2005, Conflict Management and Peace Science
 * ["Achieving Statistical Significance with Covariates and without Transparency"](https://drive.google.com/file/d/0B13GrSdju4CpcjBKMGU5ZmRjN2c/view), Gabriel Lenz, Alexander Sahn, November 27, 2017
@@ -466,160 +439,24 @@ plot_grid(p1,p2,p3,p4, labels = c("A", "B", "C", "D"), ncol = 2)
 * [SCANNING DEAD SALMON IN FMRI MACHINE HIGHLIGHTS RISK OF RED HERRINGS](https://www.wired.com/2009/09/fmrisalmon/)
 * [“Do We Really Know the WTO Cures Cancer?”](http://www.stephenchaudoin.com/CHH_Cancer_2014_09_18.pdf) Stephen Chaudoin, Jude Hays and Raymond Hicks, British Journal of Political Science.
 
-
 * [Feature_selection](https://en.wikipedia.org/wiki/Feature_selection)<br/>
 * [Confounding](https://en.wikipedia.org/wiki/Confounding)<br/>
 * ["Statistical learning and selective inference"](http://www.pnas.org/content/pnas/112/25/7629.full.pdf) Jonathan Taylora and Robert J. Tibshirani, June 23, 2015<br/>
 * ["The garden of forking paths: Why multiple comparisons can be a problem,  when there is no “fishing expedition” or “p-hacking” and the research  was posited ahead of time"](http://www.stat.columbia.edu/~gelman/research/unpublished/p_hacking.pdf), Andrew Gelman and Eric Loken, 14 Nov 2013, Unpublished Manuscript<br/>
 * [P-Hacking](https://projects.fivethirtyeight.com/p-hacking/)<br/>
-* [A Machine Learning Alternative to P-values](https://arxiv.org/pdf/1701.04944.pdf),Min Lu and Hemant Ishwaran, February 22, 2017<br/>
-* [Feature Selection with the R Package MXM:  Statistically-Equivalent Feature Subsets](https://arxiv.org/pdf/1611.03227.pdf) <br/>
-* ["bounceR"](https://github.com/STATWORX/bounceR), R Package  <br/>
-
-* https://en.wikipedia.org/wiki/Extreme_bounds_analysis
-* ['I JUST RAN Two MILLION REGRESSIONS'](http://www.ecostat.unical.it/Aiello/Didattica/economia_Crescita/CRESCITA/CRESCITA_Sala-i-Martin-AER-1997.pdf), Xavier Sala-i-Martin, 1997, American Economic Review <br/>
-* ["ExtremeBounds: Extreme Bounds Analysis in R"](https://cran.r-project.org/web/packages/ExtremeBounds/vignettes/ExtremeBounds.pdf) <br/>
-
-## Model Complexity/Parismony
-* AIC (Akaike 1973)
-* [Akaike information criterion (AIC)](https://en.wikipedia.org/wiki/Akaike_information_criterion)<br/>
-* BIC (Schwarz 1978)
-* [Bayesian information criterion (BIC)](https://en.wikipedia.org/wiki/Bayesian_information_criterion)<br/>
-
-## Regularization, e.g. Lasso/Ridge Regression
-* https://en.wikipedia.org/wiki/Lasso_(statistics)
-* ["Regression shrinkage and selection via the lasso"](http://statweb.stanford.edu/~tibs/lasso/lasso.pdf), Tibshirani, R., 1996,  J. Royal. Statist. Soc B., Vol. 58, No. 1, pages 267-288)
-* ["Glmnet Vignette"](https://cran.r-project.org/web/packages/glmnet/vignettes/glmnet_beta.pdf), Trevor Hastie and Junyang Qian, September 13, 2016
-* (ISLR) "6 Linear Model Selection and Regularization"
 
 ## Feature Engineering
 * [Feature_engineering](https://en.wikipedia.org/wiki/Feature_engineering)<br/>
-* [Interaction_(statistics)](https://en.wikipedia.org/wiki/Interaction_(statistics))<br/>
-* ["How Much Should We Trust Estimates from Multiplicative Interaction Models? Simple Tools to Improve Empirical Practice,"](http://yiqingxu.org/papers/english/2018_HMX_interaction/main.pdf), Jens Hainmueller Jonathan Mummolo Yiqing Xu,, April 20, 2018, Political Analysis<br/>
-* https://en.wikipedia.org/wiki/Support_vector_machine <br/>
-* [ELI5](https://github.com/TeamHG-Memex/eli5) <br/>
 
-# Two-Bit source, One-Bit message
+## Bandwidth / Under determination
 
-### Bandwidth / Over determination
+* [Underdetermined system](https://en.wikipedia.org/wiki/Underdetermined_system)
+
 * [Overdetermined_system](https://en.wikipedia.org/wiki/Overdetermined_system)<br/>
 
-## One-Bit source, N-bit message
-
-### Curse of Dimensionality
+## Curse of Dimensionality
 
 * [Curse_of_dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality) <br/>
 * [The Curse of Dimensionality in classification](http://www.visiondummy.com/2014/04/curse-dimensionality-affect-classification/), Vincent Spruyt <br/>
-
-* [Random subspace method](https://en.wikipedia.org/wiki/Random_subspace_method)
-
-# N-bit source, One-Bit message
-
-# Two-Bit  source, Two-Bit message
-
-# N-bit source, N-bit message
-* [Binary_number#Counting_in_binary](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) <br/>
-
-# One-Bit source, One-Bit message, One-Bit noise
-
-# Nearest Neighbor
-* [K-nearest_neighbors_algorithm](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm) <br/>
-
-Integer encoder
-Latent variable model
-
-#### Clustering
-* https://en.wikipedia.org/wiki/Cluster_analysis <br/>
-
-#### K-means
-* https://en.wikipedia.org/wiki/K-means_clustering <br/>
-
-## Clustering
-
-* "Unsupervised Machine Learning: The hclust, pvclust, cluster, mclust, and more," https://quantdev.ssri.psu.edu/sites/qdev/files/Unsupervised_Machine_Learning_The_mclust_Package_and_others.html <br/>
-
-# Linear Models
-* [Ordinary_least_squares](https://en.wikipedia.org/wiki/) <br/>
-* [Logistic_regression](https://en.wikipedia.org/wiki/Logistic_regression) <br/>
-
-
-# Decision Trees
-* https://en.wikipedia.org/wiki/Decision_tree <br/>
-* ["Tree-Based Models"](https://www.statmethods.net/advstats/cart.html) <br/>
-
-(ISLR) "8 Tree-Based Methods"
-(IntroMachineLearningWithR) "5.5 Random forest"
-
-
-
-* [“Induction of Decision Trees.”](https://link.springer.com/content/pdf/10.1007/BF00116251.pdf), Quinlan, Ross. 1986., Machine Learning 1(1):81–106.
-
-# Random Forests
-
-* https://en.wikipedia.org/wiki/Random_forest <br/>
-* ["RANDOM FORESTS"](https://www.stat.berkeley.edu/~breiman/randomforest2001.pdf) Leo Breiman, January 2001
-
-* ["Exploratory Data Analysis using Random Forests"](http://zmjones.com/static/papers/rfss_manuscript.pdf)
-
-# Neural Networks
-
-## Demos
-
-* [Tensorflow Playground](http://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.47077&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false)
-* [ConvNetJS Deep Learning in your browser](https://cs.stanford.edu/people/karpathy/convnetjs/)
-* [KerasJS](https://transcranial.github.io/keras-js/#/)
-
-* https://en.wikipedia.org/wiki/Artificial_neural_network <br/>
-* (DL) Deep Learning, Ian Goodfellow and Yoshua Bengio and Aaron Courville, 2016, http://www.deeplearningbook.org/ <br/>
-
-### LSTM
-* Christopher Olah, "Understanding LSTM Networks," August 27, 2015, http://colah.github.io/posts/2015-08-Understanding-LSTMs/ <br/>
-https://keras.rstudio.com/articles/examples/conv_lstm.html
-
-# Interpretation
-* "Why Should I Trust You?": Explaining the Predictions of Any Classifier, Marco Tulio Ribeiro, Sameer Singh, Carlos Guestrin, https://arxiv.org/abs/1602.04938
-lime, Python Package, https://github.com/marcotcr/lime
-
-# Causality
-* ["When and How Should One Use Deep Learning for Causal Effect Inference"](https://technionmail-my.sharepoint.com/personal/urishalit_technion_ac_il/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018%2FIAS2018_2_for_public%2Epdf&parent=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018&slrid=aaa2759e-909e-5000-fd16-3e33cabf926f)
-
-* ["Comparing Covariate Prioritization via Matching to Machine Learning Methods for Causal Inference using Five Empirical Applications,"](https://arxiv.org/pdf/1805.03743.pdf),Luke Keele, Dylan Small, May 11, 2018, 
-
-
-# Special Topics
-
-## Time
-* ["Investigating Sequences in Ordinal Data: A New Approach With Adapted Evolutionary Models,"](https://www.cambridge.org/core/journals/political-science-research-and-methods/article/investigating-sequences-in-ordinal-data-a-new-approach-with-adapted-evolutionary-models/F3747D8A1908902BA7F26C5EE28AFAEF),Patrik Lindenfors, Fredrik Jansson, Yi-ting Wang and Staffan I. Lindberg, Christian Lopez, 05 March 2018,
-
-## Text
-* ["Text Mining with R: A Tidy Approach,"](https://www.tidytextmining.com/), Julia Silge and David Robinson, 2018-04-02,   <br/>
-* ["Introducing Monte Carlo Methods with R,"](https://www.slideshare.net/xianblog/introducing-monte-carlo-methods-with-r) <br/>
-* ["Text as Data,"](http://web.stanford.edu/~gentzkow/research/text-as-data.pdf), Matthew Gentzkow, Bryan T. Kelly, Matt Taddy <br/>
-
-## Images
-* https://keras.rstudio.com/articles/examples/cifar10_cnn.html
-
-
-# Examples
-* ["Examining Explanations for Nuclear Proliferation"](https://doi.org/10.1093/isq/sqv007), Mark S. Bell, International Studies Quarterly, Volume 60, Issue 3, 1 September 2016, Pages 520–529
-* Weidmann, Nils B. and Sebastian Schutte. Using Night Lights for the Prediction of Local Wealth. Journal
-of Peace Research 54(2).
-
-# Extras
-
-## Gradient Boosting
-* Terence Parr and Jeremy Howard, "How to explain gradient boosting," http://explained.ai/gradient-boosting/index.html
-
-#### SVM
-* [Support_vector_machine](https://en.wikipedia.org/wiki/Support_vector_machine)
-
-
-#### How the Sausage is Made
-
-* ["Troubling  Trends  in  Machine  Learning  Scholarship"](https://www.dropbox.com/s/ao7c090p8bg1hk3/Lipton%20and%20Steinhardt%20-%20Troubling%20Trends%20in%20Machine%20Learning%20Scholarship.pdf?dl=0), Zachary  C.  Lipton∗&  Jacob  Steinhardt, July  9,  2018
-
-* [“Bagging Predictors.”](https://link.springer.com/content/pdf/10.1007/BF00058655.pdf),Breiman, Leo. 1996. , Machine Learning 24:123–140.
-
-
-
+(PRML) "1.4 The Curse of Dimensionality"
 
